added test image

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 </head>
 
 <body>
-    <h1>This is Daksh</h1>
+    <img
+        src="https://cnet3.cbsistatic.com/img/bqWirI5KbPKLhn_Ey_AQdHYSDV8=/1092x0/2020/09/08/c9eff5d2-36fd-4375-b97c-c093cb32eb77/the-child-star-wars-gallery-5e3204be4f668-0.jpg">
 </body>
 
 </html>
