added some stuff

--- a/index.html
+++ b/index.html
@@ -2,12 +2,30 @@
 <html lang="en">
 
 <head>
-
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="root/css/styles.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.11"></script>
+    <script src="root/js/index.js"></script>
+    <link rel="apple-touch-icon" sizes="180x180" href="root/images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="root/images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="root/images/favicon-16x16.png">
+    <link rel="manifest" href="images/site.webmanifest">
+    <title>Daksh Jain</title>
+    <meta charset="utf-8" />
 </head>
 
 <body>
-    <img
-        src="https://cnet3.cbsistatic.com/img/bqWirI5KbPKLhn_Ey_AQdHYSDV8=/1092x0/2020/09/08/c9eff5d2-36fd-4375-b97c-c093cb32eb77/the-child-star-wars-gallery-5e3204be4f668-0.jpg">
+    <div class="page">
+        <h1 class="name">Daksh Jain</h1>
+        <hr>
+    </div>
+    <div class="intro-code">
+        <pre><code>const DAKSH_JAIN = <span id="typed"></span></code></pre>
+    </div>
+    <script src="root/js/textAnimation.js"></script>
+    </script>
 </body>
 
 </html>
