added some media queries

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="manifest" href="images/site.webmanifest">
     <title>Daksh Jain</title>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
@@ -22,7 +23,7 @@
         <hr>
     </div>
     <div class="intro-code">
-        <pre><code>const DAKSH_JAIN = <span id="typed"></span></code></pre>
+        <pre><code><span style="color:rgb(46, 95, 255);">const</span> <span style="color: deepskyblue;">DAKSH_JAIN</span> = <span id="typed" style="color: rgb(255, 158, 40);"></span></code></pre>
     </div>
     <script src="root/js/textAnimation.js"></script>
     </script>
