--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
         <hr>
     </div>
     <div class="intro-code">
-        <pre><code><span style="color:rgb(46, 95, 255);">const</span> <span style="color: deepskyblue;">DAKSH_JAIN</span> = <span id="typed" style="color: rgb(255, 158, 40);"></span></code></pre>
+        <pre><code><span style="color:rgb(46, 95, 255);">const</span> <span style="color: deepskyblue;">DAKSH_JAIN</span> = <span id="typed" style="color: rgb(255, 158, 40);"></span>
+var current = "Working on Gambit!"</code></pre>
     </div>
     <script src="root/js/textAnimation.js"></script>
     </script>
