added links to personal urls

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="root/css/styles.css">
+    <link href="root/css/all.css" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.11"></script>
     <script src="root/js/index.js"></script>
@@ -21,10 +22,15 @@
     <div class="page">
         <h1 class="name">Daksh Jain</h1>
         <hr>
+        <div class="icons">
+            <a href="https://github.com/djain106" alt="GitHub"><i class="fab fa-github-square"></i>github /</a>
+            <a href="https://www.linkedin.com/in/daksh-j/" alt="LinkedIn"><i class="fab fa-linkedin"></i>linkedin /</a>
+            <a href="" alt="Resume"><i class="fas fa-file"></i>resume</a>
+        </div>
     </div>
     <div class="intro-code">
         <pre><code><span style="color:rgb(46, 95, 255);">const</span> <span style="color: deepskyblue;">DAKSH_JAIN</span> = <span id="typed" style="color: rgb(255, 158, 40);"></span>
-var current = "Working on Gambit!"</code></pre>
+var now = "Working on Gambit!"</code></pre>
     </div>
     <script src="root/js/textAnimation.js"></script>
     </script>
