--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="icons">
             <a href="https://github.com/djain106" alt="GitHub"><i class="fab fa-github-square"></i>github /</a>
             <a href="https://www.linkedin.com/in/daksh-j/" alt="LinkedIn"><i class="fab fa-linkedin"></i>linkedin /</a>
-            <a href="" alt="Resume"><i class="fas fa-file"></i>resume</a>
+            <a href="https://djain.dev/resume.pdf" alt="Resume"><i class="fas fa-file"></i>resume</a>
         </div>
     </div>
     <div class="intro-code">
