added under construction and changed some styling

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-    <div class="page">
+    <div class="header">
         <h1 class="name">Daksh Jain</h1>
         <hr>
         <div class="icons">
@@ -28,11 +28,14 @@
             <a href="https://djain.dev/resume.pdf" alt="Resume"><i class="fas fa-file"></i>resume /</a>
         </div>
     </div>
-    <div class="intro-code">
-        <pre><code><span style="color:rgb(46, 95, 255);">const</span> <span style="color: deepskyblue;">DAKSH_JAIN</span> = <span id="typed" style="color: rgb(255, 158, 40);"></span>
-var now = "Working on Gambit!"</code></pre>
+    <div id="coding" class="intro-code">
+        <pre><code>const <span class="variable_name">DAKSH_JAIN</span> = <span id="typed" class="string"></span>;
+        <br>var <span class="variable_name">now</span> = <span class="string">"Working on Gambit!"</span>; <a style="text-decoration: none;" href="https://github.com/djain106/gambit" class="comment">// Click Me!</span></a>
+        <br>var <span class="variable_name">interests</span> = ["Software Engineering", "Machine Learning", "Fullstack Development"];</code></pre>
     </div>
-    <script src="root/js/textAnimation.js"></script>
+    <div class="construction">
+        <p><i class="fas fa-tools"></i> Under Construction <i class="fas fa-tools"></i></p>
+    </div>
     </script>
 </body>
 
