added background change on orientation and added highlight.js

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link href="root/css/all.css" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.5.0/styles/vs2015.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.5.0/highlight.min.js"></script>
+    <!-- and it's easy to individually load additional languages -->
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.5.0/languages/go.min.js"></script> -->
     <script src="root/js/index.js"></script>
     <link rel="apple-touch-icon" sizes="180x180" href="root/images/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="root/images/favicon-32x32.png">
@@ -29,14 +33,14 @@
         </div>
     </div>
     <div id="coding" class="intro-code">
-        <pre><code>const <span class="variable_name">DAKSH_JAIN</span> = <span id="typed" class="string"></span>;
-        <br>var <span class="variable_name">now</span> = <span class="string">"Working on Gambit!"</span>; <a style="text-decoration: none;" href="https://github.com/djain106/gambit" class="comment">// Click Me!</span></a>
-        <br>var <span class="variable_name">interests</span> = ["Software Engineering", "Machine Learning", "Fullstack Development"];</code></pre>
+        <p>aboutMe.js</p>
+        <pre><code class="lang-js">const DAKSH_JAIN = <span id="typed" style="color: #D69D85;"></span>;
+        <br> var now = "Working on Gambit!"; <a style="text-decoration: none;" href="https://github.com/djain106/gambit">//Click Me!</span></a>
+        <br> var interests = ["Software Engineering", "Machine Learning", "Fullstack Development"];</code></pre>
     </div>
     <div class="construction">
         <p><i class="fas fa-tools"></i> Under Construction <i class="fas fa-tools"></i></p>
     </div>
-    </script>
 </body>
 
 </html>
