added 2 projects to the website

--- a/index.html
+++ b/index.html
@@ -23,23 +23,46 @@
 </head>
 
 <body>
-    <div class="header">
-        <h1 class="name">Daksh Jain</h1>
-        <hr>
-        <div class="icons">
-            <a href="https://github.com/djain106" alt="GitHub"><i class="fab fa-github-square"></i>github /</a>
-            <a href="https://www.linkedin.com/in/daksh-j/" alt="LinkedIn"><i class="fab fa-linkedin"></i>linkedin /</a>
-            <a href="https://djain.dev/resume.pdf" alt="Resume"><i class="fas fa-file"></i>resume /</a>
+    <div class="content">
+        <div class="header">
+            <h1 class="name">Daksh Jain</h1>
+            <hr>
+            <div class="icons">
+                <a href="https://github.com/djain106" alt="GitHub"><i class="fab fa-github-square"></i>github /</a>
+                <a href="https://www.linkedin.com/in/daksh-j/" alt="LinkedIn"><i class="fab fa-linkedin"></i>linkedin
+                    /</a>
+                <a href="https://djain.dev/resume.pdf" alt="Resume"><i class="fas fa-file"></i>resume /</a>
+            </div>
         </div>
-    </div>
-    <div id="coding" class="intro-code">
-        <p>aboutMe.js</p>
-        <pre><code class="lang-js">const DAKSH_JAIN = <span id="typed" style="color: #D69D85;"></span>;
-        <br> var now = "Working on Gambit!"; <a style="text-decoration: none;" href="https://github.com/djain106/gambit">//Click Me!</span></a>
-        <br> var interests = ["Software Engineering", "Machine Learning", "Fullstack Development"];</code></pre>
-    </div>
-    <div class="construction">
-        <p><i class="fas fa-tools"></i> Under Construction <i class="fas fa-tools"></i></p>
+        <div class="intro-code">
+            <h3>aboutMe.js</h3>
+            <pre><code class="lang-js">> const DAKSH_JAIN = <span id="typed" style="color: #D69D85;"></span>;
+        <br>> var interests = ["Software Engineering", "Machine Learning", "Fullstack Development"];
+        <br>> var now = "Working on Gambit!"; <a style="text-decoration: none;" href="https://github.com/djain106/gambit">//Click Me!</span></a>
+        <br>> var book</code></pre>
+        </div>
+        <div class="projects">
+            <h1 class="page-section">Projects</h1>
+            <div id="1" class="project">
+                <h2><a href="https://github.com/djain106/gambit">Gambit</a></h2>
+                <p><span class="underline">Technologies</span>: MongoDB, Express, React, Node
+                    <br><span class="underline">Languages</span>: JavaScript, HTML, CSS
+                    <br><span class="underline">About</span>: A React application that I used to teach myself more about
+                    modern day frameworks and how to create my own fullstack applications. This projects implements
+                    user authentication through login and has common gambling games including BlackJack,
+                    Roulette, and Slots.
+                </p>
+            </div>
+            <div id="2" class="project">
+                <h2><a href="">TF-IDF</a></h2>
+                <p>
+                    <span class="underline">Languages</span>: Python
+                    <br><span class="underline">About</span>: This project implements the <a class="underline"
+                        href="https://en.wikipedia.org/wiki/Tf%E2%80%93idf">Term Frequency - Inverse Document
+                        Frequency</a> search algorithm on provided text documents.
+                </p>
+            </div>
+        </div>
     </div>
 </body>
 
