--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <link rel="manifest" href="root/images/site.webmanifest">
     <title>Daksh Jain</title>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+    <!-- <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Daksh Jain's Personal Website">
 </head>
 
