Added some more sections

--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
     <link rel="manifest" href="root/images/site.webmanifest">
     <title>Daksh Jain</title>
     <meta charset="utf-8" />
-    <!-- <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Daksh Jain's Personal Website">
 </head>
@@ -39,7 +38,7 @@
                 <a href="https://www.linkedin.com/in/daksh-j/" alt="LinkedIn"><i class="fab fa-linkedin"></i>linkedin/
                 </a>
                 <a href="https://djain.dev/resume.pdf" alt="Resume"><i class="fas fa-file"></i>resume/</a>
-                <p id="activate_animation" onclick="activateAnimation()"><i class="fas fa-mouse"></i>click_me/</p>
+                <p id="activate_animation" onclick="activateAnimation()"><i class="fas fa-mouse"></i>play/</p>
             </div>
         </div>
         <div class="intro-code">
@@ -47,9 +46,9 @@
             <pre><code class="lang-js">> const DAKSH_JAIN = <span id="typed" style="color: #D69D85;"></span>;
         <br>> var interests = ["Software Engineering", "Machine Learning", "Fullstack Development"];
         <br>> var now = "Working on Gambit!"; <a style="text-decoration: none;" href="https://github.com/djain106/gambit">//Click Me!</span></a>
-        <br>> var book</code></pre>
+        
         </div>
-        <section class="projects">
+        <section class="section_title">
             <h1 class="page-section">Projects</h1>
             <article id="1" class="project">
                 <h2><a href="https://github.com/djain106/gambit">Gambit</a></h2>
@@ -75,9 +74,19 @@
                     total collection of documents.
                 </p>
             </article>
+            <article id="3" class="project">
+                <h2><a href="https://github.com/djain106/webnote">WebNote</a></h2>
+                <p>
+                    <span class="underline">Languages</span>: JavaScript
+                    <br><span class="underline">About</span>: This project is a chrome extension that allows users to
+                    save "sticky notes" based on the domain they are currently on. It is also enabled with Google Chrome
+                    Sync, meaning a sticky note saved on the user's desktop will also appear on their laptop or other
+                    computers where the user is signed in.
+                </p>
+            </article>
         </section>
-        <div class="contact">
-
+        <div class="section_title">
+            <h1 class="page-section">Contact Me!</h1>
         </div>
     </div>
 </body>
