--- a/index.html
+++ b/index.html
@@ -28,8 +28,10 @@
 </head>
 
 <body>
-    <div id="buttons">
-        <button>Go Back</button>
+    <div>
+        <div id="controls">
+            <button>Go Back</button>
+        </div>
     </div>
     <div id="animation">
     </div>
@@ -93,7 +95,7 @@
                 </p>
             </article>
             <article id="4" class="section-container">
-                <h2><a href="">Disbiome Analysis</a><i style="float: right;" class="fas fa-calculator"></i></h2>
+                <h2><a href="https://github.com/djain106/disbiome_matlab">Disbiome Analysis</a><i style="float: right;" class="fas fa-calculator"></i></h2>
                 <p>
                     <span class="underline">Technologies</span>: SciKit-Learn or TensorFlow
                     <br><span class="underline">Languages</span>: MATLAB, Python
@@ -110,13 +112,13 @@
         <div class="section-title">
             <h1 class="page-section">Experience</h1>
             <div class="section-container">
-
+                <p>Coming Soon!</p>
             </div>
         </div>
         <div class="section-title">
             <h1 class="page-section">Contact</h1>
             <form class="section-container">
-
+                <p>Coming Soon!</p>
             </form>
         </div>
     </div>
