added screens without lag

--- a/index.html
+++ b/index.html
@@ -10,12 +10,11 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.5.0/styles/vs2015.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.5.0/highlight.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r124/three.min.js"
-        integrity="sha512-jeYvJdyAYkpQCY/omvCYQo89qA5YxDW4JBT7COPsHT2sOAanwxkZRFeP9gc69b5reSDpZIoyCqZQZcWZkbB5Gw=="
-        crossorigin="anonymous">
-    </script>
+    <script src="https://unpkg.com/three@0.124.0/build/three.js"></script>
     <script src="https://unpkg.com/three@0.124.0/examples/js/controls/OrbitControls.js"></script>
     <script src="https://unpkg.com/three@0.124.0/examples/js/loaders/GLTFLoader.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/stats-js@1.0.1/build/stats.min.js"></script>
+    <script src="https://unpkg.com/three@0.124.0/examples/js/controls/TrackballControls.js"></script>
     <script type="module" src="root/js/index.js"></script>
     <link rel="apple-touch-icon" sizes="180x180" href="root/images/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="root/images/favicon-32x32.png">
