--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
     <script src="https://unpkg.com/three@0.124.0/examples/js/controls/OrbitControls.js"></script>
     <script src="https://unpkg.com/three@0.124.0/examples/js/loaders/GLTFLoader.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/stats-js@1.0.1/build/stats.min.js"></script>
-    <script src="https://unpkg.com/three@0.124.0/examples/js/controls/TrackballControls.js"></script>
     <script type="module" src="root/js/index.js"></script>
     <link rel="apple-touch-icon" sizes="180x180" href="root/images/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="root/images/favicon-32x32.png">
@@ -29,7 +28,9 @@
 <body>
     <div>
         <div id="controls">
-            <button>Go Back</button>
+            <button id="close_animation">Go Back</button>
+            <button id="use_car">Use Computer</button>
+            <button disabled="true" id="deactivate_car">Stop</button>
         </div>
     </div>
     <div id="animation">
