added link to gambit

--- a/index.html
+++ b/index.html
@@ -63,12 +63,12 @@
                 <p><span class="underline">Technologies</span>: MongoDB, Express, React, Node
                     <br><span class="underline">Languages</span>: JavaScript, HTML, CSS
                     <br><span class="underline">About</span>: A React application that I used to teach myself more
-                    about modern day frameworks and how to create my own fullstack applications. This projects implements
-                    user authentication through login and has common gambling games including BlackJack, Roulette, and Slots.
-                    I learned how to use hook based React to manage contexts and other state variables within the application. 
-                    I also implemented JWT authentication in cookies to persist a user login throughout their time on the application.
-                    My goal is to eventually deploy this website as a platform for people to enjoy playing these games without ever
-                    taking on the risk of losing money!
+                    about modern day frameworks and how to create my own fullstack applications. This project has features
+                    including user authentication and gambling games including BlackJack, Roulette, and Slots. I learned how to 
+                    use hook based React to manage contexts and other state variables within the application.
+                    I also implemented JWT authentication in cookies to persist a user login throughout their time on the site.
+                    This website is deployed <a href="https://dj-gambit.herokuapp.com/">here</a>. Feel free to register and try 
+                    out the features that I have added so far!
                 </p>
             </article>
             <article id="2" class="section-container">
