fix for error on site

--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
                     I also implemented JWT authentication in cookies to persist a user login throughout their time on the site.
                     This website is deployed <a href="https://dj-gambit.herokuapp.com/">here</a>. Feel free to register and try 
                     out the features that I have added so far!
+                    <br> <span class="underline">Note</span>: The link to the Heroku deployment may take several minutes to activate
+                    due to Heroku's idling state which redeploys the app after long periods of inactivity. To speed up the process, please
+                    also go to this <a href="https://gambit-backend.herokuapp.com/"></a> to start up the back-end express server also hosted on Heroku.
                 </p>
             </article>
             <article id="2" class="section-container">
